update loading function

--- a/gcn-pytorch-jiaxu/main.ipynb
+++ b/gcn-pytorch-jiaxu/main.ipynb
@@ -171,7 +171,8 @@
     "    idx_train = torch.LongTensor(idx_train)\n",
     "    idx_val = torch.LongTensor(idx_val)\n",
     "    idx_test = torch.LongTensor(idx_test)\n",
-    "\n",
+    "    \n",
+    "    print(\"Dataset Loaded!\")\n",
     "    return adj, features, labels, idx_train, idx_val, idx_test"
    ]
   },
