--- a/gcn-pytorch-jiaxu/main.ipynb
+++ b/gcn-pytorch-jiaxu/main.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "53f32db5-33c5-4bfa-8e8f-87c27a93369a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This model is currently not optimized for GPU!!!\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "44582f0b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "75c034c1",
    "metadata": {},
    "outputs": [],
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8910a2ad",
    "metadata": {},
    "outputs": [],
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f621b0a6",
    "metadata": {},
    "outputs": [],
@@ -126,12 +138,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "id": "1895fe4a-5031-49ee-8215-b667cc98a41f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(2708, 1435)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(5429, 2)\n",
+      "[[ 163  402]\n",
+      " [ 163  659]\n",
+      " [ 163 1696]\n",
+      " ...\n",
+      " [1887 2258]\n",
+      " [1902 1887]\n",
+      " [ 837 1686]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cora_path = \"../data/cora/\"\n",
+    "def test_dataset(path=cora_path, dataset=\"cora\"):\n",
+    "    idx_features_labels = np.genfromtxt(\"{}{}.content\".format(path, dataset), dtype=np.dtype(str))\n",
+    "    print(type(idx_features_labels)); print(idx_features_labels.shape); \n",
+    "    # print(idx_features_labels)\n",
+    "    \n",
+    "    idx = np.array(idx_features_labels[:, 0], dtype=np.int32)\n",
+    "    idx_map = {j: i for i, j in enumerate(idx)}\n",
+    "    edges_unordered = np.genfromtxt(\"{}{}.cites\".format(path, dataset),\n",
+    "                                    dtype=np.int32)\n",
+    "    edges = np.array(list(map(idx_map.get, edges_unordered.flatten())),\n",
+    "                     dtype=np.int32).reshape(edges_unordered.shape)\n",
+    "    print(type(edges_unordered)); print(edges_unordered.shape); \n",
+    "    # print(edges_unordered)\n",
+    "    # print(edges)\n",
+    "    return None\n",
+    "test_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "4899fbdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(path=\"../data/cora/\", dataset=\"cora\"):\n",
+    "def load_data(path=cora_path, dataset=\"cora\"):\n",
     "    # Load citation network dataset (cora only for now)\n",
     "    print('Loading {} dataset...'.format(dataset))\n",
     "\n",
