--- a/dgi-pytorch-jiaxu/main.ipynb
+++ b/dgi-pytorch-jiaxu/main.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72f55cbb-676d-4c64-9653-64a1ce92f350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import time\n",
+    "import argparse\n",
+    "import scipy.sparse as sp\n",
+    "from torch.nn.parameter import Parameter\n",
+    "from torch.nn.modules.module import Module\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "082c6237-fbcc-4aad-a437-e46e0fb8fc20",
    "metadata": {},
    "outputs": [],
    "source": []
