--- a/gcn-pytorch-jiaxu/main.ipynb
+++ b/gcn-pytorch-jiaxu/main.ipynb
@@ -18,9 +18,7 @@
     }
    ],
    "source": [
-    "'''\n",
-    "This model is currently not optimized for GPU!!!\n",
-    "'''"
+    "# This model is currently not optimized for GPU!!!"
    ]
   },
   {
