--- a/GCN-PyTorch/gcn-pyg-arxiv.ipynb
+++ b/GCN-PyTorch/gcn-pyg-arxiv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This model is optimized for GPU but not tested stability"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "0af21f33-1e09-4535-90ac-c2da31452d08",
    "metadata": {},
