--- a/GCN-PyTorch/gcn-pyg-arxiv.ipynb
+++ b/GCN-PyTorch/gcn-pyg-arxiv.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd4e7273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +27,13 @@
     "from ogb.nodeproppred import PygNodePropPredDataset, Evaluator\n",
     "from torch_geometric.data import DataLoader\n",
     "\n",
-    "from logger import Logger"
+    "from logger import Logger\n",
+    "from tqdm.notebook import trange, tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2ef270a3-5370-4773-86a3-693456b82d3a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fca6790e-b2b5-4a36-b47c-280e5c9693c3",
    "metadata": {},
    "outputs": [],
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2a4c102c-1709-494a-9df0-b3f744397cc3",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a3a4c33b-2540-4583-a3f0-cbf9ca7e598d",
    "metadata": {},
    "outputs": [],
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f985c1e5-d8dd-48bd-8daa-0becbaa1dc8c",
    "metadata": {},
    "outputs": [],
@@ -153,8 +155,8 @@
     "dropout = 0.5\n",
     "lr = 0.1\n",
     "epochs = 500\n",
-    "runs = 10\n",
-    "log_steps = 1\n",
+    "runs = 2\n",
+    "log_steps = 50\n",
     "\n",
     "model = GCN(data.num_features, hidden_channels, dataset.num_classes, num_layers, dropout).to(device)\n",
     "evaluator = Evaluator(name='ogbn-arxiv')"
@@ -162,71 +164,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "fbb5fc18-adc4-4f5c-8015-bd5b73144445",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f86bf79bf0dd4d1d853938116a3ff826",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run: 01, Epoch: 01, Loss: 4.1986, Train: 10.99%, Valid: 22.97% Test: 21.56%\n",
-      "Run: 01, Epoch: 02, Loss: 5.6963, Train: 5.85%, Valid: 4.25% Test: 3.06%\n",
-      "Run: 01, Epoch: 03, Loss: 6.2524, Train: 7.69%, Valid: 14.96% Test: 22.10%\n",
-      "Run: 01, Epoch: 04, Loss: 4.5490, Train: 9.20%, Valid: 11.15% Test: 10.49%\n",
-      "Run: 01, Epoch: 05, Loss: 4.0974, Train: 19.84%, Valid: 9.90% Test: 7.83%\n",
-      "Run: 01, Epoch: 06, Loss: 3.5769, Train: 25.59%, Valid: 28.95% Test: 25.90%\n",
-      "Run: 01, Epoch: 07, Loss: 3.3349, Train: 20.43%, Valid: 26.36% Test: 23.90%\n",
-      "Run: 01, Epoch: 08, Loss: 3.1642, Train: 14.89%, Valid: 24.34% Test: 22.41%\n",
-      "Run: 01, Epoch: 09, Loss: 2.9893, Train: 16.32%, Valid: 24.80% Test: 22.74%\n",
-      "Run: 01, Epoch: 10, Loss: 2.8215, Train: 23.55%, Valid: 27.76% Test: 24.98%\n",
-      "Run: 01, Epoch: 11, Loss: 2.6984, Train: 27.80%, Valid: 29.99% Test: 26.84%\n",
-      "Run: 01, Epoch: 12, Loss: 2.6269, Train: 29.72%, Valid: 31.40% Test: 28.05%\n",
-      "Run: 01, Epoch: 13, Loss: 2.5823, Train: 30.40%, Valid: 32.15% Test: 28.80%\n",
-      "Run: 01, Epoch: 14, Loss: 2.5423, Train: 30.88%, Valid: 32.34% Test: 29.28%\n",
-      "Run: 01, Epoch: 15, Loss: 2.4768, Train: 31.97%, Valid: 33.17% Test: 29.98%\n",
-      "Run: 01, Epoch: 16, Loss: 2.3957, Train: 33.94%, Valid: 34.82% Test: 31.75%\n",
-      "Run: 01, Epoch: 17, Loss: 2.3117, Train: 35.90%, Valid: 37.31% Test: 34.88%\n",
-      "Run: 01, Epoch: 18, Loss: 2.2510, Train: 38.21%, Valid: 41.39% Test: 39.95%\n",
-      "Run: 01, Epoch: 19, Loss: 2.2029, Train: 40.18%, Valid: 45.43% Test: 44.25%\n",
-      "Run: 01, Epoch: 20, Loss: 2.1543, Train: 41.97%, Valid: 48.43% Test: 47.58%\n"
+      "Run: 01, Epoch: 50, Loss: 1.3879, Train: 62.60%, Valid: 62.36% Test: 60.47%\n",
+      "Run: 01, Epoch: 100, Loss: 1.1788, Train: 68.24%, Valid: 67.96% Test: 67.23%\n",
+      "Run: 01, Epoch: 150, Loss: 1.0871, Train: 70.58%, Valid: 69.78% Test: 68.63%\n",
+      "Run: 01, Epoch: 200, Loss: 1.0335, Train: 71.85%, Valid: 70.62% Test: 69.74%\n",
+      "Run: 01, Epoch: 250, Loss: 0.9944, Train: 72.65%, Valid: 71.11% Test: 69.79%\n",
+      "Run: 01, Epoch: 300, Loss: 0.9695, Train: 73.15%, Valid: 70.98% Test: 69.29%\n",
+      "Run: 01, Epoch: 350, Loss: 0.9432, Train: 73.56%, Valid: 71.58% Test: 70.56%\n",
+      "Run: 01, Epoch: 400, Loss: 0.9254, Train: 74.09%, Valid: 71.94% Test: 71.13%\n",
+      "Run: 01, Epoch: 450, Loss: 0.9082, Train: 74.33%, Valid: 71.69% Test: 70.52%\n",
+      "Run: 01, Epoch: 500, Loss: 0.8953, Train: 75.02%, Valid: 71.75% Test: 70.49%\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13148/48423364.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m             \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msplit_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevaluator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[1;31m# logger.add_result(run, result)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13148/3856057655.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(model, data, train_idx, optimizer)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madj_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain_idx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain_idx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\2021.05\\envs\\research\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    888\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 889\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[0;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13148/3194278208.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, x, adj_t)\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconvs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madj_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbns\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropout\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraining\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\2021.05\\envs\\research\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    888\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 889\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[0;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\2021.05\\envs\\research\\lib\\site-packages\\torch\\nn\\modules\\batchnorm.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    138\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrunning_mean\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrack_running_stats\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrunning_var\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrack_running_stats\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 140\u001b[1;33m             self.weight, self.bias, bn_training, exponential_average_factor, self.eps)\n\u001b[0m\u001b[0;32m    141\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    142\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\2021.05\\envs\\research\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mbatch_norm\u001b[1;34m(input, running_mean, running_var, weight, bias, training, momentum, eps)\u001b[0m\n\u001b[0;32m   2148\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2149\u001b[0m     return torch.batch_norm(\n\u001b[1;32m-> 2150\u001b[1;33m         \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrunning_mean\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrunning_var\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraining\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmomentum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackends\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcudnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menabled\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2151\u001b[0m     )\n\u001b[0;32m   2152\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ed02da5a6714f0eae63ce98d2fa603f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run: 02, Epoch: 50, Loss: 1.4113, Train: 62.15%, Valid: 62.27% Test: 60.17%\n",
+      "Run: 02, Epoch: 100, Loss: 1.1888, Train: 68.27%, Valid: 68.06% Test: 66.98%\n",
+      "Run: 02, Epoch: 150, Loss: 1.1086, Train: 70.42%, Valid: 69.31% Test: 67.77%\n",
+      "Run: 02, Epoch: 200, Loss: 1.0562, Train: 71.37%, Valid: 70.39% Test: 69.06%\n",
+      "Run: 02, Epoch: 250, Loss: 1.0280, Train: 72.16%, Valid: 70.95% Test: 69.74%\n",
+      "Run: 02, Epoch: 300, Loss: 0.9917, Train: 72.58%, Valid: 70.69% Test: 68.59%\n",
+      "Run: 02, Epoch: 350, Loss: 0.9720, Train: 73.04%, Valid: 70.29% Test: 68.70%\n",
+      "Run: 02, Epoch: 400, Loss: 0.9558, Train: 73.12%, Valid: 71.28% Test: 70.31%\n",
+      "Run: 02, Epoch: 450, Loss: 0.9374, Train: 73.66%, Valid: 71.11% Test: 70.05%\n",
+      "Run: 02, Epoch: 500, Loss: 0.9279, Train: 74.14%, Valid: 71.76% Test: 70.95%\n"
      ]
     }
    ],
    "source": [
     "for run in range(runs):\n",
-    "        model.reset_parameters()\n",
-    "        optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
-    "        for epoch in range(1, 1 + epochs):\n",
-    "            loss = train(model, data, train_idx, optimizer)\n",
-    "            result = test(model, data, split_idx, evaluator)\n",
-    "            # logger.add_result(run, result)\n",
+    "    model.reset_parameters()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "    for epoch in tqdm(range(1, 1 + epochs)):\n",
+    "        loss = train(model, data, train_idx, optimizer)\n",
+    "        result = test(model, data, split_idx, evaluator)\n",
+    "        # logger.add_result(run, result)\n",
     "\n",
-    "            if epoch % log_steps == 0:\n",
-    "                train_acc, valid_acc, test_acc = result\n",
-    "                print(f'Run: {run + 1:02d}, '\n",
-    "                      f'Epoch: {epoch:02d}, '\n",
-    "                      f'Loss: {loss:.4f}, '\n",
-    "                      f'Train: {100 * train_acc:.2f}%, '\n",
-    "                      f'Valid: {100 * valid_acc:.2f}% '\n",
-    "                      f'Test: {100 * test_acc:.2f}%')"
+    "        if epoch % log_steps == 0:\n",
+    "            train_acc, valid_acc, test_acc = result\n",
+    "            print(f'Run: {run + 1:02d}, '\n",
+    "                  f'Epoch: {epoch:02d}, '\n",
+    "                  f'Loss: {loss:.4f}, '\n",
+    "                  f'Train: {100 * train_acc:.2f}%, '\n",
+    "                  f'Valid: {100 * valid_acc:.2f}% '\n",
+    "                  f'Test: {100 * test_acc:.2f}%')"
    ]
   },
   {
