--- a/GCN-PyTorch/gcn-pyg-arxiv.ipynb
+++ b/GCN-PyTorch/gcn-pyg-arxiv.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This model is optimized for GPU but not tested stability"
+    "# This model is optimized for GPU"
    ]
   },
   {
