--- a/GCN-PyTorch/gcn-pyg-arxiv.ipynb
+++ b/GCN-PyTorch/gcn-pyg-arxiv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fd4e7273",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "0af21f33-1e09-4535-90ac-c2da31452d08",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "2ef270a3-5370-4773-86a3-693456b82d3a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "fca6790e-b2b5-4a36-b47c-280e5c9693c3",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "2a4c102c-1709-494a-9df0-b3f744397cc3",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "a3a4c33b-2540-4583-a3f0-cbf9ca7e598d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "f985c1e5-d8dd-48bd-8daa-0becbaa1dc8c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
     "dropout = 0.5\n",
     "lr = 0.1\n",
     "epochs = 500\n",
-    "runs = 2\n",
+    "runs = 1\n",
     "log_steps = 50\n",
     "\n",
     "model = GCN(data.num_features, hidden_channels, dataset.num_classes, num_layers, dropout).to(device)\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "fbb5fc18-adc4-4f5c-8015-bd5b73144445",
    "metadata": {
     "scrolled": true,
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f86bf79bf0dd4d1d853938116a3ff826",
+       "model_id": "4c727409ae994996818f43ea9d838736",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,46 +189,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run: 01, Epoch: 50, Loss: 1.3879, Train: 62.60%, Valid: 62.36% Test: 60.47%\n",
-      "Run: 01, Epoch: 100, Loss: 1.1788, Train: 68.24%, Valid: 67.96% Test: 67.23%\n",
-      "Run: 01, Epoch: 150, Loss: 1.0871, Train: 70.58%, Valid: 69.78% Test: 68.63%\n",
-      "Run: 01, Epoch: 200, Loss: 1.0335, Train: 71.85%, Valid: 70.62% Test: 69.74%\n",
-      "Run: 01, Epoch: 250, Loss: 0.9944, Train: 72.65%, Valid: 71.11% Test: 69.79%\n",
-      "Run: 01, Epoch: 300, Loss: 0.9695, Train: 73.15%, Valid: 70.98% Test: 69.29%\n",
-      "Run: 01, Epoch: 350, Loss: 0.9432, Train: 73.56%, Valid: 71.58% Test: 70.56%\n",
-      "Run: 01, Epoch: 400, Loss: 0.9254, Train: 74.09%, Valid: 71.94% Test: 71.13%\n",
-      "Run: 01, Epoch: 450, Loss: 0.9082, Train: 74.33%, Valid: 71.69% Test: 70.52%\n",
-      "Run: 01, Epoch: 500, Loss: 0.8953, Train: 75.02%, Valid: 71.75% Test: 70.49%\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ed02da5a6714f0eae63ce98d2fa603f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run: 02, Epoch: 50, Loss: 1.4113, Train: 62.15%, Valid: 62.27% Test: 60.17%\n",
-      "Run: 02, Epoch: 100, Loss: 1.1888, Train: 68.27%, Valid: 68.06% Test: 66.98%\n",
-      "Run: 02, Epoch: 150, Loss: 1.1086, Train: 70.42%, Valid: 69.31% Test: 67.77%\n",
-      "Run: 02, Epoch: 200, Loss: 1.0562, Train: 71.37%, Valid: 70.39% Test: 69.06%\n",
-      "Run: 02, Epoch: 250, Loss: 1.0280, Train: 72.16%, Valid: 70.95% Test: 69.74%\n",
-      "Run: 02, Epoch: 300, Loss: 0.9917, Train: 72.58%, Valid: 70.69% Test: 68.59%\n",
-      "Run: 02, Epoch: 350, Loss: 0.9720, Train: 73.04%, Valid: 70.29% Test: 68.70%\n",
-      "Run: 02, Epoch: 400, Loss: 0.9558, Train: 73.12%, Valid: 71.28% Test: 70.31%\n",
-      "Run: 02, Epoch: 450, Loss: 0.9374, Train: 73.66%, Valid: 71.11% Test: 70.05%\n",
-      "Run: 02, Epoch: 500, Loss: 0.9279, Train: 74.14%, Valid: 71.76% Test: 70.95%\n"
+      "Run: 01, Epoch: 50, Loss: 1.4944, Train: 60.39%, Valid: 61.15% Test: 58.82%\n",
+      "Run: 01, Epoch: 100, Loss: 1.2539, Train: 66.97%, Valid: 67.58% Test: 66.98%\n",
+      "Run: 01, Epoch: 150, Loss: 1.1539, Train: 69.27%, Valid: 69.45% Test: 68.64%\n",
+      "Run: 01, Epoch: 200, Loss: 1.0960, Train: 70.77%, Valid: 70.40% Test: 69.63%\n",
+      "Run: 01, Epoch: 250, Loss: 1.0527, Train: 71.50%, Valid: 70.28% Test: 69.56%\n",
+      "Run: 01, Epoch: 300, Loss: 1.0209, Train: 72.05%, Valid: 70.84% Test: 70.19%\n",
+      "Run: 01, Epoch: 350, Loss: 0.9998, Train: 72.78%, Valid: 70.91% Test: 69.65%\n",
+      "Run: 01, Epoch: 400, Loss: 0.9751, Train: 73.32%, Valid: 71.04% Test: 69.78%\n",
+      "Run: 01, Epoch: 450, Loss: 0.9632, Train: 73.14%, Valid: 71.21% Test: 69.84%\n",
+      "Run: 01, Epoch: 500, Loss: 0.9475, Train: 73.79%, Valid: 71.35% Test: 70.37%\n"
      ]
     }
    ],
@@ -253,17 +223,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9f103d2e-80f3-4866-8008-6669ec66c606",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_15860/1561492495.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Michael\\AppData\\Local\\Temp/ipykernel_15860/1561492495.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print('f'Loss: {loss:.4f}, 'f'Train: {100 * train_acc:.2f}%, 'f'Valid: {100 * valid_acc:.2f}% 'f'Test: {100 * test_acc:.2f}%')\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = test(model, data, split_idx, evaluator)\n",
+    "train_acc, valid_acc, test_acc = result\n",
+    "print(f'Loss: {loss:.4f}, 'f'Train: {100 * train_acc:.2f}%, 'f'Valid: {100 * valid_acc:.2f}% 'f'Test: {100 * test_acc:.2f}%')"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d5fd77f783dbdc8f4bffff806f3f9a50f5e2c598183462bcffdfc1ca39dade52"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.7.11 64-bit ('research': conda)",
    "name": "python3"
   },
   "language_info": {
