--- a/GCN-PyTorch/gcn-pyg-arxiv.ipynb
+++ b/GCN-PyTorch/gcn-pyg-arxiv.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "0af21f33-1e09-4535-90ac-c2da31452d08",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "2ef270a3-5370-4773-86a3-693456b82d3a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "fca6790e-b2b5-4a36-b47c-280e5c9693c3",
    "metadata": {},
    "outputs": [],
@@ -59,6 +59,23 @@
     "\n",
     "split_idx = dataset.get_idx_split()\n",
     "train_idx = split_idx['train'].to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data(x=[169343, 128], node_year=[169343, 1], y=[169343, 1], adj_t=[169343, 169343, nnz=2315598])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
    ]
   },
   {
@@ -223,16 +240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "9f103d2e-80f3-4866-8008-6669ec66c606",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_15860/1561492495.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Michael\\AppData\\Local\\Temp/ipykernel_15860/1561492495.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print('f'Loss: {loss:.4f}, 'f'Train: {100 * train_acc:.2f}%, 'f'Valid: {100 * valid_acc:.2f}% 'f'Test: {100 * test_acc:.2f}%')\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.9475, Train: 73.79%, Valid: 71.35% Test: 70.37%\n"
      ]
     }
    ],
